--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,3 +1,4 @@
+<!--
 <!-- This is one possible solution -->
 <h1>It's My Birthday!</h1>
 <h2>On the 23rd May</h2>
@@ -16,3 +17,24 @@
 <a
   href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
   map link</a>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Venu Birthday</title>
+</head>
+<body>
+    <h1>Hi Buddy , Its my Birthday</h1>
+    <p>Mark your calendar on 23 May , and bring along your family </p>
+    <img src="https://images.unsplash.com/photo-1601268588577-319223ba7cb3?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="250"/>
+    <h2>What to bring</h2>
+    <ul>
+        <li>Wine</li>
+        <li>Birthday gift </li>
+    </ul>
+    <h2>How to reach:</h2>
+    <p>Follow this <a href='https://maps.app.goo.gl/12dy97SFW7p9KR5Q6'>Link</a></p>
+</body>
+</html>
